Closed Bug 458322 Opened 16 years ago Closed 16 years ago

Workers: Don't run queued XHR events if Abort/Open have since been called

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b2

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

References

Details

Attachments

(1 file)

Attached patch Patch, v1Splinter Review
Any events currently queued should be ignored if the XHR object has been reset.
Attachment #341551 - Flags: superreview?(jst)
Attachment #341551 - Flags: review?(jonas)
Comment on attachment 341551 [details] [diff] [review]
Patch, v1

r/sr=me with changes
Attachment #341551 - Flags: superreview?(jst)
Attachment #341551 - Flags: superreview+
Attachment #341551 - Flags: review?(jonas)
Attachment #341551 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: