Bug 458322 - 'Workers: Don't run queued XHR events if Abort/Open have since been called'. r+sr=sicking.